@@ -1,3 +1,6 @@
+2006-10-19 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
+	* Fix of ticket #94. Ignore escape sequences when binding keys using readline syntax.
+
 2006-07-20 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
 	* Fix for cursor position when tab is inserted
 
